remove extraneous email addresses from docs

--- a/code/ado/synth_runner.html
+++ b/code/ado/synth_runner.html
@@ -277,8 +277,8 @@ And in bibtex format:
 <br><br>
 <span class=result><u>Authors</u></span>
 <br><br>
-      Brian Quistorff, Brian.Quistorff@microsoft.com (corresponding author, see Development section for reportings bugs)
-      Microsoft Research
+      Brian Quistorff, brian-work@quistorff.com (corresponding author, see Development section for reportings bugs)
+      Bureau of Economic Analysis
       Sebastian Galiani
       University of Maryland
 </pre>
